Solved: centering of carousel. Now needs a media query to hide and replace with static image on small and mobile viewports

--- a/default.css
+++ b/default.css
@@ -3,41 +3,17 @@
 }
 
 #header {
-  font-family: 'Audiowide', Sans-serif;
-}
-
-#main-logo {
-  max-width: 80px;
-  max-height: 100px;
-}
-
-.nav-link:link, .nav-link:visited, .footer-links:link, .footer-links:visited {
-  margin-left: 40px;
-  margin-right: 40px;
-  letter-spacing: 2px;
   font-family: 'Audiowide', Serif;
-  font-weight: 200;
-  color: #077A07;
-}
-
-a:link, a:visited {
-  text-decoration: none;
-}
-
-#headerBackground {
-  background-image: url('images/background-black-ninja.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  height: 500px;
-  margin-bottom: 0;
 }
 
 #logo {
+  display: inline-block;
+  margin: 0;
   font-family: 'Audiowide', Serif;
   font-weight: 100;
   letter-spacing: 5px;
   color: #980909;
+  text-align: center;
 } 
 
 #reg-btn {
@@ -46,6 +22,43 @@ a:link, a:visited {
   font-family: 'Audiowide', Sans-serif;
   font-size: 18px;
 }
+
+.header-logo {
+  position: static;
+  float: left;
+  padding-top: 10px;
+  width: 180px;
+  height: 175px;
+  display: block;
+  z-index: -2;
+  text-align: right;
+}
+
+.nav-link:link, .nav-link:visited, .footer-links:link, .footer-links:visited {
+  margin-left: 30px;
+  letter-spacing: 2px;
+  font-family: 'Audiowide', Serif;
+  font-weight: 300;
+  color: #077A07;
+  float: right;
+}
+
+a:link, a:visited {
+  text-decoration: none;
+}
+
+/* white background is better, but this img does look ok and can be used for something else
+#headerBackground {
+  background-image: url('images/background-black-ninja-wide.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  max-height: 600px;
+  margin-bottom: 0;
+}
+*/
+
+/*  End Header  */
 
 h1 {
   font-family: 'Audiowide', Serif;
@@ -87,36 +100,51 @@ p {
   font-size: 22px;
 }
 
-.carousel-inner {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  background-size: cover;
-  background: #190D0D;
-}
-
-#carousel-of-ninjas {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  background: black;
-}
+/* Carousel styling */
 
 #carousel-row {
-  width: 100%;
-}
-
-.carousel-center {
   display: block;
   background: black;
   max-width: 100%;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.carousel-inner {
+  display: block;
+  max-width: 100%;
+  background: black;
+}
+
+#carousel-of-ninjas {
+  margin-left: 100px;
+  margin-right: 100px;
+  max-height: 900px;
 }
 
 .carousel-caption {
   display:inline-block;
   text-align: center;
-  color: red;
+  max-width: 600px;
+  background-color: rgba(250, 244, 239, 0.5);
   font-family: 'Alike', Sans-serif;
+  color: red;
+  margin-top: 30px;
+  margin-right: auto;
+  margin-bottom: 30px;
+  margin-left: auto;
+  padding: 0;
+}
+
+.carousel-control {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 2%;
+  background-color: white;
+  color: white;
+  padding-left: 20px;
 }
 
 #lighter-font {
